--- a/src/pages/OrdersPage.css
+++ b/src/pages/OrdersPage.css
@@ -1,14 +1,12 @@
 /* src/pages/OrdersPage.css */
-
+@import url('../styles/fonts.css');
 /* -----------gf-------------- */
 /* --- ОБЩИЕ СТИЛИ ТЕЛА --- */
 /* ------------------------- */
 body {
     background-color: #f8f9fa; /* Слегка серый фон для всей страницы */
     color: #212529; /* Чуть более мягкий черный для текста */
-    font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif;
-    margin: 0;
-    padding: 2rem;
+    font-family: 'Ubuntu', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", sans-serif;
 }
 
 /* --------------------------------- */
