--- a/src/pages/OrdersPage.css
+++ b/src/pages/OrdersPage.css
@@ -435,3 +435,10 @@ h3 {
     padding: 2px 4px;
     margin: -2px -4px; /* Компенсация padding, чтобы не сдвигать ячейку */
 }
+
+.url-cell {
+  max-width: 250px; /* Максимальная ширина ячейки, можете изменить значение */
+  white-space: nowrap; /* Запрещаем перенос текста на новую строку */
+  overflow: hidden; /* Обрезаем все, что не помещается */
+  text-overflow: ellipsis; /* Добавляем "..." в конце обрезанного текста */
+}
