--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 html, body, #root {
   height: 100%;
   margin: 0;
-  overflow: hidden; /* <--- Верните эту строку */
+  /* overflow: hidden; <--- Верните эту строку */
 }
